--- a/app/assets/stylesheets/publications.scss
+++ b/app/assets/stylesheets/publications.scss
@@ -11,16 +11,22 @@
     background-color: rgb(35, 36, 36);
     color: rgb(164, 159, 152);
     font-size: 1.2rem;
-
-
 }
-
-
-
 .car{
 
     margin-bottom: 0.2rem;
     margin-left: 9rem;
 
+}
 
+.tl{
+    color: #57a5fe;
+}
+
+.hr{
+    color: #57a5fe;
+}
+
+.ds{
+    color: darkgrey;
 }
