--- a/app/views/publications/new.html.erb
+++ b/app/views/publications/new.html.erb
@@ -1,4 +1,4 @@
-<h4>Publica tus Recursos</h4>
+<h4 class="bg-dark text-muted text-center">Publica tus Recursos</h4>
 
 <%= render 'form', publication: @publication %>
 
