--- a/app/views/publications/index.html.erb
+++ b/app/views/publications/index.html.erb
@@ -5,47 +5,33 @@
 
 
           <div class="container mb-5">
-            <%= link_to 'New Publication', new_publication_path ,class:"btn btn-info text-dark rounded-pill " %>
-           </div>
+            <%= link_to 'Comparte Tu Codigo o Comando', new_publication_path ,class:"btn btn-info text-dark rounded-pill p-2" %>
+          </div>
   
     
-   
-     
+          <% @publications.each do |publication| %>
+          <div class="container ">
+            <hr class="text-muted"/>
+            <ul>
+              <li><h3 class="text-muted" ><%= publication.title %></h3></li>
+              <%= link_to 'Show', publication %>
+                  <%= link_to 'Edit', edit_publication_path(publication) %>
+                  <%= link_to 'Destroy', publication, method: :delete, data: { confirm: 'Are you sure?' } %>
+              <li><p class="text-muted"><%= publication.description %></p></li>
+              <div class="alert alert-primary font-monospace p-1 opacity-75" role="alert">
+                    <h4 class="font-monospace"><%= publication.code%></h4>
+              </div>
+                
+            </ul>
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#c0392b" class="bi bi-balloon-fill" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M8.48 10.901C11.211 10.227 13 7.837 13 5A5 5 0 0 0 3 5c0 2.837 1.789 5.227 4.52 5.901l-.244.487a.25.25 0 1 0 .448.224l.04-.08c.009.17.024.315.051.45.068.344.208.622.448 1.102l.013.028c.212.422.182.85.05 1.246-.135.402-.366.751-.534 1.003a.25.25 0 0 0 .416.278l.004-.007c.166-.248.431-.646.588-1.115.16-.479.212-1.051-.076-1.629-.258-.515-.365-.732-.419-1.004a2.376 2.376 0 0 1-.037-.289l.008.017a.25.25 0 1 0 .448-.224l-.244-.487ZM4.352 3.356a4.004 4.004 0 0 1 3.15-2.325C7.774.997 8 1.224 8 1.5c0 .276-.226.496-.498.542-.95.162-1.749.78-2.173 1.617a.595.595 0 0 1-.52.341c-.346 0-.599-.329-.457-.644Z"/>
+            </svg>
+              <a class="text-muted"><%= publication.tools%></a>
+              <%= link_to distance_of_time_in_words(Time.now, publication.created_at), publication%>
+              
+            <hr/>
+            </div>
+            <% end %> 
 
-          <hr class="my-4" />
- <% @publications.each do |publication| %>
-       
-                    <!-- Post preview-->
-                  <div class="card shadow-lg border-light bg-dark rounded ">
-                    <div class="card-header barra border-light text-white">
-                      <tr class="ml-auto">
-                        <td><%= link_to 'Show', publication %></td>
-                        <td><%= link_to 'Edit', edit_publication_path(publication) %></td>
-                        <td><%= link_to 'Destroy', publication, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-                      </tr>
-
-                    </div>
-                 
-                    <div class="text-white card-body border-light">
-                      <h5 class="card-title border-light"><%= publication.title %></h5>
-                      <hr />
-                      <p class="card-text"><%= publication.description %></p>
-
-                    <div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
-                      <div class="card-header border-dark"><%= publication.tools %></div>
-                      <div class="card-body">
-                        <p class="card-text font-monospace text-dark"><%= publication.code %></p>
-                      </div>
-                    </div> 
-                   
-                    </div>
-                    <div class="card-footer text-muted border-light">
-                       <%= link_to distance_of_time_in_words(Time.now, publication.created_at), publication, class:" text-succes ml-auto mr-2"%>
-                    </div>
-
-                  </div> 
-                  <hr class="my-4" />
-                        <% end %>                                
-    
 
 
