--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,31 +14,33 @@
             </div>
 
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
-            <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
 
+            <% if  user_signed_in? %>
 
-            <li class="nav-item">
-            <a class="nav-link" href="#">Publicar</a>
-            </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Publicar</a>
+                </li>
+
+            <%else%>
+
             <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Recursos
+                Cuenta
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Bootstrap</a></li>
-                <li><a class="dropdown-item" href="#">Gemas Rails</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Chart</a></li>
+                <li class="dropdown-item">
+                    <%= link_to 'Registrate',new_user_registration_path, class:"nav-link text-dark" %>
+                </li>
+
+                <li class="dropdown-item">
+                    <%= link_to 'Inicia Sesion',user_session_path, class:"nav-link text-dark" %>
+                </li>
+
             </ul>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
             </li>
             </div>
         </ul>
-
+        <%end%>
         </div>
     </div>
 </nav>
