--- a/app/views/publications/index.html.erb
+++ b/app/views/publications/index.html.erb
@@ -2,10 +2,28 @@
 
 
     <!-- Page Header-->
+          <% if  user_signed_in? %>
+
+            <div class="container mb-5">
+              <%= link_to 'Comparte Tu Codigo o Comando', new_publication_path ,class:"btn btn-info text-dark rounded-pill p-2" %>
+            </div>
+            <div class="container">
+
+          <% else %>
+            <div class="container mb-5">
+              <%= link_to 'Registrate para Compartir', new_user_registration_path ,class:"btn btn-info text-dark rounded-pill p-2" %>
+            </div>
+
+          <% end %>
 
 
-          <div class="container mb-5">
-            <%= link_to 'Comparte Tu Codigo o Comando', new_publication_path ,class:"btn btn-info text-dark rounded-pill p-2" %>
+          <%= form_with(url:root_path, method: :get, local: :true, class: 'form-control bg-dark p-3 text-muted') do %>
+          <%= text_field_tag :q, "Ingresa Palabra clave y enter para buscar", class: 'form-control bg-dark text-muted' %>
+
+          
+          <%end%>
+
+              
           </div>
   
     
@@ -13,6 +31,7 @@
           <div class="container ">
             <hr class="text-muted"/>
             <ul>
+                  <%= publication.user.email%>
               <li><h3 class="text-muted" ><%= publication.title %></h3></li>
               <%= link_to 'Show', publication %>
                   <%= link_to 'Edit', edit_publication_path(publication) %>
