--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,6 +4,11 @@
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
+    
+    <div class="field">
+      <%= f.label 'Username' %><br />
+      <%= f.text_field :username, class:"form-control" %>
+  </div>
 
     <div class="field">
       <%= f.label :email %><br />
