--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,13 +10,13 @@
 
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
 
-            <% if  user_signed_in? %>
+          
 
                 <li class="nav-item">
                     <a class="nav-link" href="#">Publicar</a>
                 </li>
 
-            <%else%>
+  
 
             <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -30,12 +30,15 @@
                 <li class="dropdown-item">
                     <%= link_to 'Inicia Sesion',user_session_path, class:"nav-link text-dark" %>
                 </li>
+                 <li class="dropdown-item">
+                    <%= link_to ' Sesion',destroy_user_session_path, class:"nav-link text-dark" %>
+                </li>
+                
 
             </ul>
             </li>
             </div>
         </ul>
-        <%end%>
         </div>
     </div>
 </nav>
