--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,13 +1,13 @@
-<div class="container pt-5 mt-5 text-center">
+<div class="form-outline mt-5 text-center text-white">
 
   <h2>Sign up</h2>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
     
-    <div class="field">
+    <div class="field ">
       <%= f.label 'Username' %><br />
-      <%= f.text_field :username, class:"form-control" %>
+      <%= f.text_field :username %>
   </div>
 
     <div class="field">
@@ -39,6 +39,9 @@
 
 
 </div>
+
+
+
 
 
 
