--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -9,18 +9,11 @@
 
 
         <ul class="navbar-nav ms-5 mb-2 mb-lg-0 ms-auto ">
-
-         <%= form_with(url:root_path, method: :get, local: :true, class: ' d-flex p-1 form-control bg-dark text-muted h-25 d-inline-block') do %>
-          <%= text_field_tag :q, "Buscar", class: 'form-control bg-secondary text-dark w-auto p-1 h-25 d-inline-block ' %>
-            <%= submit_tag( "Buscar", Class: 'btn btn-outline-success btn-sm' )%>
-          
-          <%end%>
-  
-  
-
-            <li class="nav-item dropdown">
+        <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Cuenta
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="28" fill="currentColor" class="bi bi-person" viewBox="0 0 16 16">
+                    <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
+                </svg>
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li class="dropdown-item">
@@ -30,16 +23,21 @@
                 <li class="dropdown-item">
                     <%= link_to 'Inicia Sesion',user_session_path, class:"nav-link text-dark" %>
                 </li>
-                 <li class="dropdown-item">
-                    <%= link_to ' Sesion',destroy_user_session_path, class:"nav-link text-dark" %>
-                </li>
+
 
             </ul>
             </li>
 
-                  <li class="nav-item ">
-                    <a class="nav-link" href="#">Publicar</a>
-                </li>
+         <%= form_with(url:root_path, method: :get, local: :true, class: ' d-flex  p-1 form-control bg-dark text-muted h-25 d-inline-block') do %>
+          <%= text_field_tag :q, "", class: 'form-control bg-secondary text-dark w-auto p-1 h-25 d-inline-block  rounded-pill' %>
+            <%= submit_tag( "Buscar", Class: 'btn btn-outline-success btn-sm' )%>
+          
+          <%end%>
+  
+  
+
+
+
 
 
             </div>
