--- a/app/views/publications/index.html.erb
+++ b/app/views/publications/index.html.erb
@@ -1,17 +1,20 @@
 <p id="notice"><%= notice %></p>
 
 
+
+
+
     <!-- Page Header-->
           <% if  user_signed_in? %>
 
             <div class="container mb-5">
-              <%= link_to 'Comparte Tu Codigo o Comando', new_publication_path ,class:"btn btn-info text-dark rounded-pill p-2" %>
+              <%= link_to 'Comparte Tu Codigo o Comando', new_publication_path ,class:"btn  text-white rounded-pill " ,style:"background-color:#59B46A;" %>
             </div>
             <div class="container">
 
           <% else %>
             <div class="container mb-5">
-              <%= link_to 'Registrate para Compartir', new_user_registration_path ,class:"btn btn-info text-dark rounded-pill p-2" %>
+              <%= link_to 'Registrate para Compartir', new_user_registration_path ,class:"btn  text-white rounded-pill "  ,style:"background-color:#59B46A;" %>
             </div>
 
           <% end %>
@@ -22,43 +25,69 @@
     
           <% @publications.each do |publication| %>
           <div class="container ">
-            <hr class="text-muted"/>
+            <hr class="text-muted" style="background-color: #2C3E50;"/>
 
-            <div class="card opacity-50">
-                <div class="card-header ">
-                 Quote
-                </div>
-                <div class="card-body">
-                <blockquote class="blockquote mb-0">
-                   <p>A well-known quote, contained in a blockquote element.</p>
-                    <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
-                </blockquote>
+
+<section >
+  <div class="container  ">
+    <div class="row d-flex justify-content-center ">
+      <div class="col-md-12 col-lg-10 col-xl-8" >
+        <div class="card"  style="background-color:#161B22;">
+          <div class="card-body">
+            <div class="d-flex flex-start align-items-center">
+              <img class="rounded-circle shadow-1-strong me-3"
+                src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="avatar" width="60"
+                height="60" />  
+              <div>
+                <h6 class="fw-bold  mb-1 fs-4" style="color: #58A6FF;"><%= publication.title %></h6>
+                
+                <p class="text-info small mb-0 fs-6 ">
+                   Publicado hace <%= link_to distance_of_time_in_words(Time.now, publication.created_at), publication, class:"text-info"%> por <%= publication.user.username %>
+                </p>
               </div>
             </div>
+
+            <p class="mt-3 mb-4 pb-2 text-white fw-bolder">
+              <%= publication.description %>
+            </p>
+
+            <div class="small d-flex justify-content-start">
+              <a href="" class="d-flex align-items-center me-3">
+  
+              <div class="badge bg-primary text-wrap" style="width: 6rem;">
+                 <%= publication.user.username %>
+             </div>
+
+              </a>
+              <a href="" class="d-flex align-items-center me-3">
+              <div class="badge bg-danger text-wrap" style="width: 6rem;">
+                 <%= publication.tools %>
+              </div>
+              </a>
+
+            </div>
+          </div>
+          <div class="card-footer py-3 border-1 border-secondary" style="background-color: #1D1F23;">
+            <div class="d-flex flex-start w-100">
+              <div class="form-outline w-100">
+                <textarea class="form-control h-2  font-monospace fs-5 border-secondary text-warning" id="textAreaExample" rows="4"
+                  style="background: #1B2631; "><%= publication.code%></textarea>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
             
             <ul>
           
-              <li><h3 class="text-muted" ><%= publication.title %></h3></li>
-              
-              <li><p class="text-muted"><%= publication.description %></p></li>
-              <div class="alert alert-primary font-monospace p-1 opacity-75" role="alert">
-                    <h4 class="font-monospace"><%= publication.code%></h4>
-              </div>
-                
-            </ul>
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#c0392b" class="bi bi-balloon-fill" viewBox="0 0 16 16">
-              <path fill-rule="evenodd" d="M8.48 10.901C11.211 10.227 13 7.837 13 5A5 5 0 0 0 3 5c0 2.837 1.789 5.227 4.52 5.901l-.244.487a.25.25 0 1 0 .448.224l.04-.08c.009.17.024.315.051.45.068.344.208.622.448 1.102l.013.028c.212.422.182.85.05 1.246-.135.402-.366.751-.534 1.003a.25.25 0 0 0 .416.278l.004-.007c.166-.248.431-.646.588-1.115.16-.479.212-1.051-.076-1.629-.258-.515-.365-.732-.419-1.004a2.376 2.376 0 0 1-.037-.289l.008.017a.25.25 0 1 0 .448-.224l-.244-.487ZM4.352 3.356a4.004 4.004 0 0 1 3.15-2.325C7.774.997 8 1.224 8 1.5c0 .276-.226.496-.498.542-.95.162-1.749.78-2.173 1.617a.595.595 0 0 1-.52.341c-.346 0-.599-.329-.457-.644Z"/>
-            </svg>
-              <div class="badge bg-danger text-wrap" style="width: 6rem;">
-                 <%= publication.tools %>
-             </div>
 
-             <div class="badge bg-primary text-wrap" style="width: 6rem;">
-                 <%= publication.user.username %>
-             </div>
-              <%= link_to distance_of_time_in_words(Time.now, publication.created_at), publication%>
-              
-            <hr/>
+            </ul>
+
+
+
             </div>
             <% end %> 
 
