--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,8 @@
 <div class="form-outline mt-5 text-center text-white">
 
-  <h2>Sign up</h2>
+  <h2>Registrate</h2>
+
+  <div>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
@@ -27,6 +29,8 @@
       <%= f.label :password_confirmation %><br />
       <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
     </div>
+
+  </div>
 
     <div class="actions">
       <%= f.submit "Sign up" %>
