--- a/app/views/publications/show.html.erb
+++ b/app/views/publications/show.html.erb
@@ -1,47 +1,40 @@
 <p id="notice"><%= notice %></p>
-
-
-
-    
-       
-          <div class="container ">
-            <hr class="text-muted"style="background-color: #2C3E50;"/>
-
-
-<section >
+<div class="container ">
+  <hr class="text-muted"style="background-color: #2C3E50;"/>
+  <section >
   <div class="container  ">
     <div class="row d-flex justify-content-center ">
       <div class="col-md-12 col-lg-10 col-xl-8" >
-        <div class="card"  style="background-color:#1D1F23;">
+        <div class="card"  style="background-color:#161B22;">
           <div class="card-body">
             <div class="d-flex flex-start align-items-center">
               <img class="rounded-circle shadow-1-strong me-3"
                 src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="avatar" width="60"
                 height="60" />  
               <div>
-                <h6 class="fw-bold text-primary mb-1"><%=  @publication.title %></h6>
+                <h6 class="fw-bold  mb-1 fs-4" style="color: #58A6FF;"><%= @publication.title %></h6>
                 
-                <p class="text-muted small mb-0">
-                   Publicado hace :<%= link_to distance_of_time_in_words(Time.now,  @publication.created_at),  @publication%>
+                <p class="text-info small mb-0 fs-6 ">
+                    Publicado hace <%= link_to distance_of_time_in_words(Time.now, @publication.created_at), @publication, class:"text-info"%> por <%= @publication.user.username %>
                 </p>
               </div>
             </div>
 
             <p class="mt-3 mb-4 pb-2 text-white fw-bolder">
-              <%=  @publication.description %>
+              <%= @publication.description %>
             </p>
 
             <div class="small d-flex justify-content-start">
               <a href="" class="d-flex align-items-center me-3">
   
               <div class="badge bg-primary text-wrap" style="width: 6rem;">
-                 <%=  @publication.user.username %>
-             </div>
+                  <%= @publication.user.username %>
+            </div>
 
               </a>
               <a href="" class="d-flex align-items-center me-3">
               <div class="badge bg-danger text-wrap" style="width: 6rem;">
-                 <%=  @publication.tools %>
+                <%= @publication.tools %>
               </div>
               </a>
 
@@ -51,18 +44,19 @@
             <div class="d-flex flex-start w-100">
               <div class="form-outline w-100">
                 <textarea class="form-control h-2  font-monospace fs-5 border-secondary text-warning" id="textAreaExample" rows="4"
-                  style="background: #1B2631; "><%=  @publication.code%></textarea>
+                  style="background: #1B2631; "><%= @publication.code%></textarea>
               </div>
             </div>
-
           </div>
         </div>
       </div>
     </div>
   </div>
-</section>
+  </section>
 
 
 
-<%= link_to 'Edit', edit_publication_path(@publication) %> |
-<%= link_to 'Back', publications_path %>
+<div class="container text-center pt-3">
+  <%= link_to 'Editar', edit_publication_path(@publication), class:"btn  text-white rounded-pill ", style:"background-color:#59B46A;" %>|
+  <%= link_to 'Publicaciones', publications_path, class:"btn  text-white rounded-pill ", style:"background-color:#59B46A;" %>
+</div>
