--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,51 +1,42 @@
 <div class="form-outline mt-5 text-center text-white">
 
-  <h2>Registrate</h2>
+  <h2 class="fs-5 mb-4">Registrate</h2>
 
-  <div>
+  <div class="container border border-secondary  w-25  " style="background-color:#161B22">
 
-  <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
-    
-    <div class="field ">
-      <%= f.label 'Username' %><br />
-      <%= f.text_field :username %>
-  </div>
-
-    <div class="field">
-      <%= f.label :email %><br />
-      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
+      
+      <div class="field">
+        <%= f.label :Username, class:"mb-auto mt-3 opacity-100 fs-6 " %><br />
+        <%= f.text_field :username , autofocus: true, class:"border-secondary border rounded-pill opacity-50", style:"background-color:#0D1117"%>
     </div>
+      <div class="field">
+        <%= f.label :email, class:"mb-auto  fs-6 mt-3"  %><br />
+        <%= f.email_field :email,autocomplete: "email" ,class:"border-secondary border rounded-pill opacity-50",style:"background-color:#0D1117"%>
+      </div>
 
-    <div class="field">
-      <%= f.label :password %>
-      <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em>
-      <% end %><br />
-      <%= f.password_field :password, autocomplete: "new-password" %>
-    </div>
+      <div class="field">
+        <%= f.label :password, class:"mb-auto mt-3 fs-6 "  %>
+        <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %> characters minimum)</em>
+        <% end %><br />
+        <%= f.password_field :password, autocomplete: "new-password" , class:"border-secondary border rounded-pill opacity-50", style:"background-color:#0D1117" %>
+      </div>
 
-    <div class="field">
-      <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-    </div>
-
-  </div>
-
-    <div class="actions">
-      <%= f.submit "Sign up" %>
-    </div>
-  <% end %>
-
-  <%= render "devise/shared/links" %>
-
+      <div class="field">
+        <%= f.label :password_confirmation, class:"mb-auto fs-6 "  %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"border-secondary border rounded-pill opacity-50", style:"background-color:#0D1117" %>
+      </div>
+      <div class="actions">
+        <%= f.submit "Sign up", class:"btn  mt-3 mb-3 text-white rounded-pill " ,style:"background-color:#2EA043;" %>
+      </div>
+    <% end %>
+   </div>
 
 
 
 </div>
-
-
-
 
 
 
