--- a/app/views/publications/index.html.erb
+++ b/app/views/publications/index.html.erb
@@ -8,13 +8,13 @@
           <% if  user_signed_in? %>
 
             <div class="container mb-5">
-              <%= link_to 'Comparte Tu Codigo o Comando', new_publication_path ,class:"btn  text-white rounded-pill " ,style:"background-color:#59B46A;" %>
+              <%= link_to 'Comparte Tu Codigo o Comando', new_publication_path ,class:"btn  text-white rounded-pill " ,style:"background-color:#2EA043;" %>
             </div>
             <div class="container">
 
           <% else %>
             <div class="container mb-5">
-              <%= link_to 'Registrate para Compartir', new_user_registration_path ,class:"btn  text-white rounded-pill "  ,style:"background-color:#59B46A;" %>
+              <%= link_to 'Registrate para Compartir', new_user_registration_path ,class:"btn  text-white rounded-pill "  ,style:"background-color:#2EA043" %>
             </div>
 
           <% end %>
