--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,18 +2,18 @@
 
   <h2 class="fs-5 mb-4">Registrate</h2>
 
-  <div class="container border border-secondary  w-25  " style="background-color:#161B22">
+  <div class="container card border border-secondary  w-sing" style="background-color:#161B22">
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
       
       <div class="field">
-        <%= f.label :Username, class:"mb-auto mt-3 opacity-100 fs-6 " %><br />
-        <%= f.text_field :username , autofocus: true, class:"border-secondary border rounded-pill opacity-50", style:"background-color:#0D1117"%>
+        <%= f.label :Username, class:"mb-auto mt-3 opacity-100 fs-6  " %><br />
+        <%= f.text_field :username , autofocus: true, class:"border-secondary border rounded-pill opacity-50 text-white", style:"background-color:#0D1117"%>
     </div>
       <div class="field">
         <%= f.label :email, class:"mb-auto  fs-6 mt-3"  %><br />
-        <%= f.email_field :email,autocomplete: "email" ,class:"border-secondary border rounded-pill opacity-50",style:"background-color:#0D1117"%>
+        <%= f.email_field :email,autocomplete: "email" ,class:"border-secondary border rounded-pill opacity-50 text-white",style:"background-color:#0D1117"%>
       </div>
 
       <div class="field">
@@ -21,12 +21,12 @@
         <% if @minimum_password_length %>
         <em>(<%= @minimum_password_length %> characters minimum)</em>
         <% end %><br />
-        <%= f.password_field :password, autocomplete: "new-password" , class:"border-secondary border rounded-pill opacity-50", style:"background-color:#0D1117" %>
+        <%= f.password_field :password, autocomplete: "new-password" , class:"border-secondary border rounded-pill opacity-50 text-white", style:"background-color:#0D1117" %>
       </div>
 
       <div class="field">
         <%= f.label :password_confirmation, class:"mb-auto fs-6 "  %><br />
-        <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"border-secondary border rounded-pill opacity-50", style:"background-color:#0D1117" %>
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"border-secondary border rounded-pill opacity-50 text-white", style:"background-color:#0D1117" %>
       </div>
       <div class="actions">
         <%= f.submit "Sign up", class:"btn  mt-3 mb-3 text-white rounded-pill " ,style:"background-color:#2EA043;" %>
