add front login 2.1

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,8 +1,8 @@
 <div class="form-outline mt-5 text-center text-white">
 
-  <h2 class="fs-5 mb-4">Registrate</h2>
+  <h2 class="fs-5 mb-4 opacity-50">Sign up</h2>
 
-  <div class="container card border border-secondary  w-sing" style="background-color:#161B22">
+  <div class="container card border border-secondary  opacity-75 w-sing" style="background-color:#161B22">
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <%= render "devise/shared/error_messages", resource: resource %>
