--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,8 +4,7 @@
         <a class="navbar-brand fw-lighter" href=""><i class="fa-solid fa-desktop"></i> CODEVELOPER</a>
         <% if  user_signed_in? %>
         <span class="text-white fs-6 ">Hola</span> &nbsp<a class="text-info fs-6 "><%=current_user.username%></a>
-        <% end %>
-
+        <% end %
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
