--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,10 +32,11 @@
 
   <%= render'shared/navbar'%>
 
-
-  <div class="container">
+  <div class="">
       <%= yield %>
   </div>
+
+   <%= render'shared/footer'%>
 
   </body>
 </html>
