--- a/app/views/publications/_form.html.erb
+++ b/app/views/publications/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="container shadow-lg p-3 mb-5 bg-dark rounded">
+<div class="container shadow-lg p-3 mb-5 rounded">
 
 <%= form_with(model: publication, local: true) do |form| %>
   <% if publication.errors.any? %>
@@ -13,28 +13,32 @@
     </div>
   <% end %>
 
+  <<hr class="text-muted" style="background-color: #2C3E50;"/>
+
   <div class="form-outline">
-    <%= form.text_field :title, class:"form-control bg-dark text-muted",placeholder:"¿Que titulo debe llevar tu publicacion?" %>
-    <label class="form-label">Titulo de la publicacion</label>
+    <%= form.text_field :title, class:"form-control text-white",placeholder:"¿Que titulo debe llevar tu publicacion?",style:"background: #1B2631;"%>
+    <label class="form-label"></label>
   </div>
 
   <div class="form-outline">
-    <%= form.text_area :description, class:"form-control bg-dark text-muted",placeholder:"Debes describir para que se utiliza tu comado o codigo compartido" %>
-    <label class="form-label">Descripcion del comando</label>
+    <%= form.text_area :description, class:"form-control  text-white",placeholder:"Debes describir para que se utiliza tu comado o codigo compartido",style:"background: #1B2631;"%>
+    <label class="form-label"></label>
   </div>
 
   <div class="form-outline">
-    <%= form.text_field :tools, class:"form-control bg-dark text-muted",placeholder:"Indicar para que lenguaje o herramienta sirve el codigo como por ej:ruby on rails"  %>
-    <label class="form-label">Nombre de la herramienta o leguaje de programacion </label>
+    <%= form.text_field :tools, class:"form-control  text-white",placeholder:"Indicar para que lenguaje o herramienta sirve el codigo como por ej:ruby on rails", style:"background: #1B2631;" %>
+    <label class="form-label"> </label>
   </div>
 
   <div class="form-outline">
-    <%= form.text_area :code, class:"form-control bg-dark text-muted",placeholder:"Debes indicar el comando o codigo para el recurso compartido" %>
-    <label class="form-label">Codigo o comando </label>
+    <%= form.text_area :code, class:"form-control text-white",placeholder:"Debes indicar el comando o codigo para el recurso compartido", style:"background: #1B2631;" %>
+    <label class="form-label"></label>
   </div>
+
+  <hr class="text-muted " style="background-color: #2C3E50;"/>
 
   <div class = 'actions'>
-            <%= form.submit "Publicar", class:"btn btn-info text-dark btn btn-info text-dark rounded-pill p-2"  %>
+            <%= form.submit "Publicar", class:"btn  text-white rounded-pill " ,style:"background-color:#2EA043;"   %>
         </div>
   <% end %>
 
