--- a/app/views/publications/new.html.erb
+++ b/app/views/publications/new.html.erb
@@ -1,6 +1,12 @@
-<h4 class="bg-dark text-muted text-center">Publica tus Recursos</h4>
+<div class="container">
 
-<%= render 'form', publication: @publication %>
+    <h4 class="text-white text-center pt-3">Publica tus Recursos</h4>
+
+    <%= render 'form', publication: @publication %>
+
+</div>
+
+
 
 <%# <%= link_to 'Back', publications_path %> 
 
