--- a/app/views/publications/_form.html.erb
+++ b/app/views/publications/_form.html.erb
@@ -13,7 +13,7 @@
     </div>
   <% end %>
 
-  <<hr class="text-muted" style="background-color: #2C3E50;"/>
+  <hr class="text-muted" style="background-color: #2C3E50;"/>
 
   <div class="form-outline">
     <%= form.text_field :title, class:"form-control text-white",placeholder:"¿Que titulo debe llevar tu publicacion?",style:"background: #1B2631;"%>
